# job-application-pipeline

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.claude/skills/tailor-application/: SKILL.md
common/: schema.py
dashboard/: app.py
dashboard/templates/: base.html  generate.html  job_detail.html  job_list.html
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 21efe21fd24d_create_jobs_table.py
fetcher/: adzuna.py  base.py
mcp_server/: server.py
mcp_server/resources/: honesty_flags.md  master_resume.tex
pdfgen/: render.py
review/: actions.py  cli.py
scorer/: keywords.py  rules.py  run.py
tests/: conftest.py  test_dashboard.py  test_mcp_server.py  test_normalizer.py  test_pdfgen.py  test_review_actions.py  test_review_cli.py  test_scorer.py
