[project]
name = "job-application-pipeline"
version = "0.1.0"
description = "Fetch, score, and draft tailored applications for job postings — with a human review gate before anything is sent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["common", "db", "fetcher", "scorer", "mcp_server", "review"]
